# coralmicro

./: .gitmodules
.github/workflows/: arduino.yml  ci.yml
apps/: CMakeLists.txt
apps/catdog_blinker/: CMakeLists.txt  ReadMe.md  main.cc  mobilenetv3_cats_vs_dogs_m4.cc  requirements.txt  stream.py
apps/fine_tune_face/: base_model.py
examples/button_led/: button_led.cc
examples/camera_streaming_rpc/: requirements.txt
examples/classify_images/: requirements.txt
examples/segment_poses/: requirements.txt
models/: mobilenetv3_cats_vs_dogs_edgetpu.tflite
scripts/: flashtool.py
